crates/keron-lang/tests/corpus/errors/parse/pattern_double_literal_out_of_range.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: double literal is out of range
  --> 2:3
  |
2 |   999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999.0 => "huge",
  |   ^
